Fixed issue of scrollbar shifting contents of the website to the left when the list exceeds the window. #3

--- a/deck-builder/styles.css
+++ b/deck-builder/styles.css
@@ -5,6 +5,10 @@ body {
   font-family: 'Open Sans', sans-serif;
 }
 
+html {
+  overflow-y: scroll;
+}
+
 header {
   width: 1200px;
   background-color: rgb(40, 40, 40);
